[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
alloy-chains = "0.1.9"
alloy-primitives = "0.6.0"

alloy-providers = { git = "https://github.com/alloy-rs/alloy" } 
#alloy-signer = { git = "https://github.com/alloy-rs/alloy" } 
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy" }  
alloy-rpc-client =  { git = "https://github.com/alloy-rs/alloy", features = ["reqwest"]}
alloy-rpc-types =  { git = "https://github.com/alloy-rs/alloy"}
reqwest = "0.11.23"
eyre = "0.6.11"
alloy-sol-types = "0.6.0"
# personal libraries (in development)
ccip = { git = "https://github.com/DrHongos/chainlink-ccip/" }
datafeeds = { git = "https://github.com/DrHongos/chainlink-datafeeds" }
